examples/datalog/09_recursion/19_path_with_cost.dl
% Test: Path finding with costs
% Expected: Can compute shortest paths
% Category: 09_recursion
% Priority: P2 - Recursion patterns

.kg create test_path_cost
.kg use test_path_cost

% Weighted edges
+edge[(1, 2, 10), (2, 3, 20), (1, 3, 50), (3, 4, 5)].

% Direct path cost
+path_cost(X, Y, Cost) :- edge(X, Y, Cost).

% 2-hop path cost
+path_cost(X, Z, Cost) :- edge(X, Y, C1), edge(Y, Z, C2), Cost = C1 + C2.

?- path_cost(X, Y, Cost).

% Minimum cost per destination
min_cost(Start, End, <MIN:Cost>) :- path_cost(Start, End, Cost).

?- min_cost(Start, End, MinCost).

.kg use default
.kg drop test_path_cost
